force-app/main/default/objects/Quarterly_Opportunity_Trends_Snapshot__c/Quarterly_Opportunity_Trends_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Quarterly Opportunity Trends Snapshot</label>
    <nameField>
        <label>Quarterly Opportunity Trends Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quarterly Opportunity Trends Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>