force-app/main/default/objects/Quarterly_Opportunity_Trends_Snapshot__c/fields/Forecast_Status__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Status__c</fullName>
    <formula>IF(
  Won__c,
  &quot;4. Closed Won&quot;,
  IF(
    In_Manager_Forecast__c,
    &quot;3. In Manager Forecast&quot;,
    IF(
      Upside__c,
      &quot;2. Upside&quot;,
      &quot;1. Not in Forecast&quot;
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Status</label>
    <type>Text</type>
</CustomField>